force-app/main/default/objects/Conveyance__c/Conveyance__c.object-meta.xml
<CustomObject>
    <label>Sales Contract</label>
    <nameField>
        <displayFormat>{YY}{000}</displayFormat>
        <label>Contract #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>