force-app/main/default/objects/Conveyance__c/fields/Actual_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Transfer_Date__c</fullName>
    <label>Actual Transfer Date</label>
    <type>Date</type>
</CustomField>