force-app/main/default/objects/Conveyance__c/fields/Additional_Survey__c.field-meta.xml
<CustomField>
    <fullName>Additional_Survey__c</fullName>
    <label>Additional Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>