force-app/main/default/objects/Conveyance__c/fields/Additional_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Survey Completed</label>
    <type>Checkbox</type>
</CustomField>