force-app/main/default/objects/Conveyance__c/fields/Additional_Survey_On__c.field-meta.xml
<CustomField>
    <fullName>Additional_Survey_On__c</fullName>
    <label>Additional Survey On</label>
    <type>Date</type>
</CustomField>