force-app/main/default/objects/Conveyance__c/fields/Additional_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Surveyor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Surveyor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyances3</relationshipName>
    <type>Lookup</type>
</CustomField>