force-app/main/default/objects/Conveyance__c/fields/Agency_License__c.field-meta.xml
<CustomField>
    <fullName>Agency_License__c</fullName>
    <label>Agency License?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>