force-app/main/default/objects/Conveyance__c/fields/Agent_Acting_For__c.field-meta.xml
<CustomField>
    <fullName>Agent_Acting_For__c</fullName>
    <label>Agent Acting For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>