force-app/main/default/objects/Conveyance__c/fields/All_Enquiries_Answered1__c.field-meta.xml
<CustomField>
    <fullName>All_Enquiries_Answered1__c</fullName>
    <inlineHelpText>If you tick &apos;All Enquiries Answered&apos; and keep this blank then It will automatically Update</inlineHelpText>
    <label>All Enquiries Answered</label>
    <type>DateTime</type>
</CustomField>