force-app/main/default/objects/Conveyance__c/fields/All_Enquiries_Answered__c.field-meta.xml
<CustomField>
    <fullName>All_Enquiries_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Enquiries Answered</label>
    <type>Checkbox</type>
</CustomField>