force-app/main/default/objects/Conveyance__c/fields/All_Enquiries_Asked_Answered1__c.field-meta.xml
<CustomField>
    <fullName>All_Enquiries_Asked_Answered1__c</fullName>
    <label>All Enquiries Asked &amp; Answered</label>
    <type>DateTime</type>
</CustomField>