force-app/main/default/objects/Conveyance__c/fields/All_Searches_Received_Satisfactory1__c.field-meta.xml
<CustomField>
    <fullName>All_Searches_Received_Satisfactory1__c</fullName>
    <inlineHelpText>If you tick &apos;All Searches Received &amp; Satisfactory&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>All Searches Received &amp; Satisfactory</label>
    <type>DateTime</type>
</CustomField>