force-app/main/default/objects/Conveyance__c/fields/All_Searches_Received_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>All_Searches_Received_Satisfactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Searches Received &amp; Satisfactory</label>
    <type>Checkbox</type>
</CustomField>