force-app/main/default/objects/Conveyance__c/fields/BRN__c.field-meta.xml
<CustomField>
    <fullName>BRN__c</fullName>
    <label>BRN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>