force-app/main/default/objects/Conveyance__c/fields/Buyer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK(  Buyer_Contact__c )),
TEXT(Buyer_Contact__r.Salutation)  &amp; &apos; &apos; &amp;  Buyer_Contact__r.FirstName  &amp; &apos; &apos; &amp;  Buyer_Contact__r.LastName &amp; &apos; &amp; &apos; &amp; TEXT( Secondary_Buyer_Tenant__r.Salutation )  &amp; &apos; &apos; &amp;   Secondary_Buyer_Tenant__r.FirstName   &amp; &apos; &apos; &amp;   Secondary_Buyer_Tenant__r.LastName ,NULL
)</formula>
    <label>Buyer Contact Name</label>
    <type>Text</type>
</CustomField>