force-app/main/default/objects/Conveyance__c/fields/Buyer_Count__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Count__c</fullName>
    <label>3rd Party Buyer Count</label>
    <summaryFilterItems>
        <field>Conveyance_Contact_Role__c.Role__c</field>
        <operation>equals</operation>
        <value>Buyer, Buyer POA</value>
    </summaryFilterItems>
    <summaryForeignKey>Conveyance_Contact_Role__c.Conveyance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>