force-app/main/default/objects/Conveyance__c/fields/Buyer_EID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_EID__c</fullName>
    <label>Buyer EID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>