force-app/main/default/objects/Conveyance__c/fields/Buyer_Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Represented_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Represented By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conveyances</relationshipName>
    <type>Lookup</type>
</CustomField>