force-app/main/default/objects/Conveyance__c/fields/Buyer_Visa__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Visa__c</fullName>
    <label>Buyer Visa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>