force-app/main/default/objects/Conveyance__c/fields/Cash_Buyer_Proof_Of_Funds_Received1__c.field-meta.xml
<CustomField>
    <fullName>Cash_Buyer_Proof_Of_Funds_Received1__c</fullName>
    <inlineHelpText>If you tick &apos;Cash Buyer Proof Of Funds Received&apos; and keep this blank then It will automatically Update.</inlineHelpText>
    <label>Cash Buyer Proof Of Funds Received</label>
    <type>DateTime</type>
</CustomField>