force-app/main/default/objects/Conveyance__c/fields/Cash_Buyer_Proof_Of_Funds_Received__c.field-meta.xml
<CustomField>
    <fullName>Cash_Buyer_Proof_Of_Funds_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Buyer Proof Of Funds Received</label>
    <type>Checkbox</type>
</CustomField>