force-app/main/default/objects/Conveyance__c/fields/Client_Information_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Client_Information_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Information Form Received</label>
    <type>Checkbox</type>
</CustomField>