force-app/main/default/objects/Conveyance__c/fields/Client_Information_Form_Receiveds__c.field-meta.xml
<CustomField>
    <fullName>Client_Information_Form_Receiveds__c</fullName>
    <inlineHelpText>If you tick &apos;Client Information Form Received&apos; and keep this blank then It will automatically Update.</inlineHelpText>
    <label>Client Information Form Received</label>
    <type>DateTime</type>
</CustomField>