force-app/main/default/objects/Conveyance__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing</label>
    <referenceTo>pba__Closing__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>