force-app/main/default/objects/Conveyance__c/fields/Company_s_fee__c.field-meta.xml
<CustomField>
    <fullName>Company_s_fee__c</fullName>
    <label>Company&apos;s fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>