force-app/main/default/objects/Conveyance__c/fields/Complete_Close_Lead1__c.field-meta.xml
<CustomField>
    <fullName>Complete_Close_Lead1__c</fullName>
    <inlineHelpText>If you tick &apos;Complete &amp; Close Lead&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Complete &amp; Close Lead</label>
    <type>DateTime</type>
</CustomField>