force-app/main/default/objects/Conveyance__c/fields/Complete_Close_Lead__c.field-meta.xml
<CustomField>
    <fullName>Complete_Close_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete &amp; Close Lead</label>
    <type>Checkbox</type>
</CustomField>