force-app/main/default/objects/Conveyance__c/fields/Completion_expected__c.field-meta.xml
<CustomField>
    <fullName>Completion_expected__c</fullName>
    <label>Completion expected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>