force-app/main/default/objects/Conveyance__c/fields/Contract_Buyer_AML_Count__c.field-meta.xml
<CustomField>
    <fullName>Contract_Buyer_AML_Count__c</fullName>
    <label>Contract Buyer AML Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>