force-app/main/default/objects/Conveyance__c/fields/Contract_Pack_Approved_Enquiry_Raised1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pack_Approved_Enquiry_Raised1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Pack Approved &amp; Enquiry Raised</label>
    <type>Checkbox</type>
</CustomField>