force-app/main/default/objects/Conveyance__c/fields/Contract_Pack_Approved_Enquiry_Raised__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pack_Approved_Enquiry_Raised__c</fullName>
    <inlineHelpText>If you tick &apos;Contract Pack Approved &amp; Enquiry Raised&apos; and keep this blank then It will automatically Update.</inlineHelpText>
    <label>Contract Pack Approved &amp; Enquiry Raised</label>
    <type>DateTime</type>
</CustomField>