force-app/main/default/objects/Conveyance__c/fields/Contract_Pack_Sent1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pack_Sent1__c</fullName>
    <inlineHelpText>If you tick &apos;Contract Pack Sent&apos; and keep this blank then It will automatically Update.</inlineHelpText>
    <label>Contract Pack Sent</label>
    <type>DateTime</type>
</CustomField>