force-app/main/default/objects/Conveyance__c/fields/Contract_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pack_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Pack Sent</label>
    <type>Checkbox</type>
</CustomField>