force-app/main/default/objects/Conveyance__c/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <label>Contract Period Calendar Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>