force-app/main/default/objects/Conveyance__c/fields/Contract_Signed_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signed Purchaser</label>
    <type>Checkbox</type>
</CustomField>