force-app/main/default/objects/Conveyance__c/fields/Contract_Signed_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signed Vendor</label>
    <type>Checkbox</type>
</CustomField>