force-app/main/default/objects/Conveyance__c/fields/Contract_Signed_Vendor_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Vendor_Date__c</fullName>
    <label>Contract Signed Vendor Date</label>
    <type>Date</type>
</CustomField>