force-app/main/default/objects/Conveyance__c/fields/Conveyancing_Fee_Paid_by__c.field-meta.xml
<CustomField>
    <fullName>Conveyancing_Fee_Paid_by__c</fullName>
    <label>Conveyancing Fee Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Buyer-Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>