force-app/main/default/objects/Conveyance__c/fields/Deposit_Received_From_Client1__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received_From_Client1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Received From Client</label>
    <type>Checkbox</type>
</CustomField>