force-app/main/default/objects/Conveyance__c/fields/Deposit_Received_From_Client__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received_From_Client__c</fullName>
    <inlineHelpText>If you tick &apos;Deposit Received From Client&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Deposit Received From Client</label>
    <type>DateTime</type>
</CustomField>