force-app/main/default/objects/Conveyance__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeveloperName</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>