force-app/main/default/objects/Conveyance__c/fields/Draft_And_Contract_Request__c.field-meta.xml
<CustomField>
    <fullName>Draft_And_Contract_Request__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Drafting&apos;)  ||  ISPICKVAL(Status__c, &apos;Contract Request&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft And Contract Request</label>
    <type>Checkbox</type>
</CustomField>