force-app/main/default/objects/Conveyance__c/fields/Draft_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Draft_Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Contract  Received</label>
    <type>Checkbox</type>
</CustomField>