force-app/main/default/objects/Conveyance__c/fields/Draft_Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Draft_Contract_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft Contract Sent</label>
    <type>Checkbox</type>
</CustomField>