force-app/main/default/objects/Conveyance__c/fields/Draft_Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Contract_Sent_Date__c</fullName>
    <label>Draft Contract Sent Date</label>
    <type>Date</type>
</CustomField>