force-app/main/default/objects/Conveyance__c/fields/Enquiries_Answered__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiries Answered</label>
    <type>Checkbox</type>
</CustomField>