force-app/main/default/objects/Conveyance__c/fields/Enquiries_Answered_Date__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Answered_Date__c</fullName>
    <label>Enquiries Answered Date</label>
    <type>Date</type>
</CustomField>