force-app/main/default/objects/Conveyance__c/fields/Enquiries_Received_From_Buyers_Lawyers1__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Received_From_Buyers_Lawyers1__c</fullName>
    <inlineHelpText>If you tick &apos;Enquiries Received From Buyers Lawyers&apos; and keep this blank then It will automatically Update</inlineHelpText>
    <label>Enquiries Received From Buyers Lawyers</label>
    <type>DateTime</type>
</CustomField>