force-app/main/default/objects/Conveyance__c/fields/Enquiries_Received_From_Buyers_Lawyers__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Received_From_Buyers_Lawyers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiries Received From Buyers Lawyers</label>
    <type>Checkbox</type>
</CustomField>