force-app/main/default/objects/Conveyance__c/fields/Enquiries_Sent__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiries Sent</label>
    <type>Checkbox</type>
</CustomField>