force-app/main/default/objects/Conveyance__c/fields/Enquiries_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Sent_Date__c</fullName>
    <label>Enquiries Sent Date</label>
    <type>Date</type>
</CustomField>