force-app/main/default/objects/Conveyance__c/fields/Exchange_of_Contract_expected__c.field-meta.xml
<CustomField>
    <fullName>Exchange_of_Contract_expected__c</fullName>
    <label>Exchange of Contract expected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>