force-app/main/default/objects/Conveyance__c/fields/Exchange_Price__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Price__c</fullName>
    <label>Exchange Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>