force-app/main/default/objects/Conveyance__c/fields/Exchanged__c.field-meta.xml
<CustomField>
    <fullName>Exchanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchanged</label>
    <type>Checkbox</type>
</CustomField>