force-app/main/default/objects/Conveyance__c/fields/Exchanged_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Date__c</fullName>
    <inlineHelpText>If you tick &apos;Exchanged&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Exchanged Date</label>
    <type>DateTime</type>
</CustomField>