force-app/main/default/objects/Conveyance__c/fields/Exchanged_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchanged Purchaser</label>
    <type>Checkbox</type>
</CustomField>