force-app/main/default/objects/Conveyance__c/fields/Exchanged_Purchaser_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Purchaser_Date__c</fullName>
    <label>Exchanged Purchaser Date</label>
    <type>Date</type>
</CustomField>