force-app/main/default/objects/Conveyance__c/fields/Exchanged_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchanged Vendor</label>
    <type>Checkbox</type>
</CustomField>