force-app/main/default/objects/Conveyance__c/fields/Exchanged_Vendor_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_Vendor_Date__c</fullName>
    <label>Exchanged Vendor Date</label>
    <type>Date</type>
</CustomField>