force-app/main/default/objects/Conveyance__c/fields/External_Brokerage_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Brokerage_Name__c</fullName>
    <label>External Brokerage Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>