force-app/main/default/objects/Conveyance__c/fields/F_F_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>F_F_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F&amp;F Form Completed</label>
    <type>Checkbox</type>
</CustomField>