force-app/main/default/objects/Conveyance__c/fields/F_F_Form_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>F_F_Form_Completed_Date__c</fullName>
    <label>F&amp;F Form Completed Date</label>
    <type>Date</type>
</CustomField>