force-app/main/default/objects/Conveyance__c/fields/Finance_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Finance_Conditional__c</fullName>
    <label>Finance Conditional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>