force-app/main/default/objects/Conveyance__c/fields/First_Broker__c.field-meta.xml
<CustomField>
    <fullName>First_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>