force-app/main/default/objects/Conveyance__c/fields/First_Broker_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Broker_Amount__c</fullName>
    <label>First Broker Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>