force-app/main/default/objects/Conveyance__c/fields/Form_A_Sales_Leasing_form_or_NOC__c.field-meta.xml
<CustomField>
    <fullName>Form_A_Sales_Leasing_form_or_NOC__c</fullName>
    <label>Form A, Sales/Leasing form or NOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>