force-app/main/default/objects/Conveyance__c/fields/Include_parking_at_extra_cost_of__c.field-meta.xml
<CustomField>
    <fullName>Include_parking_at_extra_cost_of__c</fullName>
    <label>Include parking at extra cost of</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>