force-app/main/default/objects/Conveyance__c/fields/Informed_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Informed_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informed Buyer</label>
    <type>Checkbox</type>
</CustomField>