force-app/main/default/objects/Conveyance__c/fields/Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Inquiry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>pba__Request__c</referenceTo>
    <relationshipName>Conveyances</relationshipName>
    <type>Lookup</type>
</CustomField>