force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Agent__c</fullName>
    <formula>Listing_L__r.Listing_Inquiry_Recipient__r.FirstName  &amp; &quot; &quot; &amp;  Listing_L__r.Listing_Inquiry_Recipient__r.LastName</formula>
    <label>Listing Agent</label>
    <type>Text</type>
</CustomField>