force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Community__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Community__c</fullName>
    <formula>Listing_L__r.pba_uaefields__Community_Propertyfinder__c</formula>
    <label>Listing Community</label>
    <type>Text</type>
</CustomField>