force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Country__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Country__c</fullName>
    <formula>Listing_L__r.pba__Country_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Country</label>
    <type>Text</type>
</CustomField>