force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Furnished__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Furnished__c</fullName>
    <formula>TEXT( Listing_L__r.pba_uaefields__Furnished__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Furnished</label>
    <type>Text</type>
</CustomField>