force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Mandate__c</fullName>
    <formula>TEXT( Listing_L__r.gsir_mandate__c )</formula>
    <label>Listing Mandate</label>
    <type>Text</type>
</CustomField>