force-app/main/default/objects/Conveyance__c/fields/Inquiry_Listing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Listing_Unit__c</fullName>
    <formula>Listing_L__r.Unit__c</formula>
    <label>Listing Unit</label>
    <type>Text</type>
</CustomField>