force-app/main/default/objects/Conveyance__c/fields/Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Type__c</fullName>
    <formula>TEXT(Inquiry__r.InquiryType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Type</label>
    <type>Text</type>
</CustomField>