force-app/main/default/objects/Conveyance__c/fields/Inquiry_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Unit_Number__c</fullName>
    <formula>Listing_L__r.gsir_unit_number__c</formula>
    <label>Listing Unit Number</label>
    <type>Text</type>
</CustomField>