force-app/main/default/objects/Conveyance__c/fields/Instruction_Received_Monies_On_Account1__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Received_Monies_On_Account1__c</fullName>
    <label>Instruction Received &amp; Monies On Account</label>
    <type>DateTime</type>
</CustomField>