force-app/main/default/objects/Conveyance__c/fields/Instruction_Received_Monies_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Received_Monies_On_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instruction Received &amp; Monies On Account</label>
    <type>Checkbox</type>
</CustomField>