force-app/main/default/objects/Conveyance__c/fields/Internal_agent_count__c.field-meta.xml
<CustomField>
    <fullName>Internal_agent_count__c</fullName>
    <label>Internal Agent Count</label>
    <summaryForeignKey>Conveyance_Contact_Role__c.Conveyance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>