force-app/main/default/objects/Conveyance__c/fields/Is_10_deposit__c.field-meta.xml
<CustomField>
    <fullName>Is_10_deposit__c</fullName>
    <label>Is 10% deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>