force-app/main/default/objects/Conveyance__c/fields/Is_Created_By_Login_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_Login_User__c</fullName>
    <formula>IF( CreatedById  =  $User.Id, True , False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Created By Login User</label>
    <type>Checkbox</type>
</CustomField>