force-app/main/default/objects/Conveyance__c/fields/Is_Direct_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Direct_Buyer__c</fullName>
    <label>Is the Buyer Direct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>