force-app/main/default/objects/Conveyance__c/fields/Is_the_property_vacant_rented__c.field-meta.xml
<CustomField>
    <fullName>Is_the_property_vacant_rented__c</fullName>
    <label>Is the property Vacant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>