force-app/main/default/objects/Conveyance__c/fields/Items_to_be_Included__c.field-meta.xml
<CustomField>
    <fullName>Items_to_be_Included__c</fullName>
    <label>Items to be Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>