force-app/main/default/objects/Conveyance__c/fields/KYC_Received__c.field-meta.xml
<CustomField>
    <fullName>KYC_Received__c</fullName>
    <label>Seller KYC Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>