force-app/main/default/objects/Conveyance__c/fields/Listing_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Listing_Bedroom__c</fullName>
    <formula>Listing_L__r.pba__Bedrooms_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Bedroom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>