force-app/main/default/objects/Conveyance__c/fields/Listing_Broker_s_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_s_Listing_ID__c</fullName>
    <formula>Listing_L__r.pba_uaefields__Broker_s_Listing_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker&apos;s Listing ID</label>
    <type>Text</type>
</CustomField>